# workshop-docker-aovivo

./: Dockerfile  README.md  app.py  pyproject.toml
